// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default 1`] = `
<DocumentFragment>
  .c0.c0 {
  display: inline-block;
  height: 32px;
  padding: 0 12px;
  line-height: 32px;
  font-size: 14px;
  border-radius: 4px;
  border: 1px solid #D4D8DD;
  color: #333333;
  background: transparent;
  cursor: pointer;
  position: relative;
  z-index: 0;
}

.c0.c0:before,
.c0.c0:after {
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  border-radius: 4px;
}

.c0.c0:before {
  z-index: -1;
  background: linear-gradient(to bottom,#FFFFFF,#ECF2FD);
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.c0.c0:after {
  content: '';
  z-index: -2;
  background: linear-gradient(to bottom,#ECF2FD,#FFFFFF);
  border-radius: 4px;
}

.c0.c0:hover:before {
  opacity: 0;
}

.c0.c0:active,
.c0.c0:focus,
.c0.c0:visited {
  outline: 0;
  box-shadow: 0 0 0 2px rgba(212,216,221,0.3);
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button with icon 1`] = `
<DocumentFragment>
  .c1 {
  font-size: 13px;
  color: #333333;
}

.c1:hover {
  color: #333333;
}

.c0.c0 {
  display: inline-block;
  height: 32px;
  padding: 0 12px;
  line-height: 32px;
  font-size: 14px;
  border-radius: 4px;
  border: 1px solid #D4D8DD;
  color: #333333;
  background: transparent;
  cursor: pointer;
  position: relative;
  z-index: 0;
}

.c0.c0:before,
.c0.c0:after {
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  border-radius: 4px;
}

.c0.c0:before {
  z-index: -1;
  background: linear-gradient(to bottom,#FFFFFF,#ECF2FD);
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.c0.c0:after {
  content: '';
  z-index: -2;
  background: linear-gradient(to bottom,#ECF2FD,#FFFFFF);
  border-radius: 4px;
}

.c0.c0:hover:before {
  opacity: 0;
}

.c0.c0:active,
.c0.c0:focus,
.c0.c0:visited {
  outline: 0;
  box-shadow: 0 0 0 2px rgba(212,216,221,0.3);
}

.c2.c2 {
  padding-right: 4px;
  width: 10px;
  color: #BEBEBE;
}

<button
    class="c0"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-bell fa-w-14 c1 c2"
      data-icon="bell"
      data-prefix="fas"
      focusable="false"
      role="img"
      theme="[object Object]"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 512c35.32 0 63.97-28.65 63.97-64H160.03c0 35.35 28.65 64 63.97 64zm215.39-149.71c-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84C118.56 68.1 64.08 130.3 64.08 208c0 102.3-36.15 133.53-55.47 154.29-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h383.8c19.12 0 32-15.6 32.1-32 .05-7.55-2.61-15.27-8.61-21.71z"
        fill="currentColor"
      />
    </svg>
    button
  </button>
</DocumentFragment>
`;
